# HomeLab

./: README.md  temp.json
.github/workflows/: deployment.yaml  dice-roller.yaml  nats-client.yaml  nats-service.yaml  web-server.yaml
gitops/apps/: values-otel-collector.yaml  values.yaml
gitops/cassandra/: Chart.yaml  values.yaml
gitops/dice-roller/: Chart.yaml  values.yaml
gitops/elasticsearch/: Chart.yaml  values.yaml
gitops/guestbook/: guestbook-ui-deplyment.yaml  gustbook-ui-svc.yaml
gitops/nats/: nats.yaml
gitops/nats-client/: Chart.yaml  values.yaml
gitops/nats-service/: Chart.yaml  values.yaml
gitops/open-telemetry/: Chart.yaml  values-deployment.yaml  values.yaml
gitops/open-telemetry-daemon/: Chart.yaml  values.yaml
gitops/otel-collector/: Chart.yaml  values.yaml
gitops/test_nats/: Chart.yaml  values.yaml
gitops/web-server/: Chart.yaml  values.yaml
infrastructure/: argocd.yaml
infrastructure/argocd/: config.yaml  repository.yaml
infrastructure/cluster/: apps.yaml  certmanager.yaml  ingress.yaml  kustomization.yaml  metallb.yaml  metrics-service.yaml  nginx.yaml  prod-kustomization.yaml  sealed-secrets.yaml  traefik.yaml
infrastructure/nats/: Chart.yaml
infrastructure/terraform/: .gitignore
services/dice-roller/: Dockerfile  pyproject.toml
services/dice-roller/dice_roller/: main.py
services/dice-roller/gitops/: deployment.yaml  image.yaml  imagepolicy.yaml  kustomization.yaml
services/nats-client/: Cargo.toml  Dockerfile
services/nats-service/: Cargo.toml
services/nats-service/src/: main.rs
(+75 files in other folders)
