[package]
name = "nats-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
nats = "0.24.0"
opentelemetry = { version = "0.20.0", features = ["trace", "logs"] }
opentelemetry-appender-log = "0.1.0"
opentelemetry-stdout = { version = "0.1.0", features = ["trace", "logs"] }
opentelemetry_sdk = { version = "0.20.0", features = ["logs"] }
serde_json = "1.0.107"
